# heysh-server

./: .cursorrules  .cursorrules-architecture  .cursorrules-caddy  .cursorrules-config  .cursorrules-devops  .cursorrules-frontend-architecture  .cursorrules-pydantic  .cursorrules-react  .cursorrules-testing  .cursorrules-typescript  .env.example  .gitignore  API_MIGRATION_GUIDE.md  API_VERIFICATION_RESULTS.md  ARCHITECTURE_CHANGES_SUMMARY.md  CHATGPT_SETUP.md  Caddyfile  DAILY_WORKFLOW.md  DEPLOYMENT.md  DEPLOYMENT_CHEATSHEET.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_WORKFLOW.md  Dockerfile  GCP_PRODUCTION_IMPROVEMENT_PLAN.md  HOSTNAME_SETUP.md  LICENSE  MIGRATION_QUICKSTART.md  Makefile  PRODUCTION_BOOTSTRAP.md  README.md  api-hey-sh.paw  bootstrap.sh  cloudbuild.yaml  cloudbuild_backend.yaml  cloudbuild_base.yaml  cloudbuild_deploy.yaml  cloudbuild_workers.yaml  demo_complete_bootstrap.py  deploy_production.sh  dev_hybrid_workflow.py  (+23 more)
activity/: __init__.py  ai_agent_activities.py  document.py  document_contribution_activities.py  llm.py  notification.py  openai_enhanced.py  supabase.py
config/: model_selection.py  openrouter_config.py
deployments/: Dockerfile  Dockerfile.ai-worker  Dockerfile.storage-worker  docker-compose.multi-queue.yml
doc/: API.md  ARCHITECTURE.md  AUTH_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  HTTPS_DEVELOPMENT_SETUP.md  README.md  TESTING_GUIDE.md  WEBSOCKET_INTEGRATION.md  add-workflow.prompt.md
docker/: Caddyfile  Caddyfile.https  Caddyfile.production  Dockerfile  Dockerfile.base  Dockerfile.worker  config-injector.py  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  frontend-config.js  index.html
docs/: API.md  API_ENDPOINTS.md  AUTH_SETUP_SUMMARY.md  BACKEND_SETUP_COMPLETE.md  CADDY_SETUP.md  CLOUD_BUILD_SETUP.md  CLOUD_DEPLOYMENT_ROADMAP.md  CLOUD_MIGRATION_PROGRESS.md  CODEBASE_STANDARDS_PLAN.md  COMPARISON_ANTHROPIC_AGENT_SKILLS.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_QUICKSTART.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  DOCUMENTATION_VERIFICATION.md  DOCUMENT_ANALYSIS_WORKFLOW.md  DOMAIN_SEARCH_GUIDE.md  EXTENSIONS_INDEX.md  FRONTEND_BACKEND_INTEGRATION.md  GRACEFUL_DEGRADATION.md  IMPLEMENTATION_GUIDE.md  INFRASTRUCTURE.md  KUBERNETES_HEALTH_CHECKS.md  LOCAL_DOMAINS_SETUP.md  LOCAL_HEALTH_TESTS.md  LOCAL_SERVERS.html  LOVABLE_INTEGRATION.md  MODELS_GUIDE.md  MONITORING_LEARNING_GUIDE.md  PHASE_1_IMPLEMENTATION.md  PORT_MAPPING.md  PROJECT_PLAN.md  QUICKSTART.md  SETUP_HOSTS.md  TEMPORAL_CLOUD_QUICKSTART.md  TEMPORAL_CLOUD_SETUP.md  TEMPORAL_INTEGRATION.md  TEMPORAL_WORKFLOW_TEST_SUMMARY.md  TESTING_GUIDE.md  (+9 more)
monitoring/: alertmanager.yml  alerts.yaml  grafana-dashboard.json  loki-config.yaml  prometheus-config.yaml  promtail-config.yaml
script/: approve_domain_bootstrap.py  bootstrap-install.sh  create_signal_table.sql  demo_openrouter_flow.py  demo_smart_ai_tiers.py  deploy.sh  deploy_backend.sh  deploy_worker.sh  dev_openrouter_cost_effective.py  domain_config_architect-isac-gustav-clason.json  export-supabase-data.sh  expose_local_api.sh  generate-k8s-config.py  get_config.py  implement-phase1.sh  implement-phase2.sh  render_prompt.py  setup-https-dev.sh  setup-uv.sh  setup_gcp_secrets.sh  setup_local_domains.sh  setup_weaviate_schema.py  start_api_cloud.sh  start_worker_cloud.sh  test-config.py  test_document_workflow.sh  test_domain_search.sh  test_neo4j_aura.py  test_workflows.sh  workflow_client.py
scripts/: detect-port-conflicts.py  discover-services.py  docker-network.sh  generate-docker-config.py  get_config.py  implement-phase1.sh  implement-phase2.sh  init_weaviate.py  run_migration.py  run_migration_auto.py  setup-uv.sh  validate-config.py  verify_migration.sh
service/: api.py  routes_data.py  routes_document_analysis.py  routes_domain_bootstrap.py  routes_domain_bootstrap_complete.py  version.py
src/: __init__.py
test/: Dockerfile.mock-ai  Dockerfile.test-runner  __init__.py  conftest.py  load_test.py  mock_ai_service.py  run_tests.py  run_tests.sh  smoke_test_staging.py  test_api_endpoints.py  test_auth_flow.sh  (+16 more)
(+144 files in other folders)
